Coverity analysis defect 116111: Uninitialized pointer field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Execution Team 2020-08-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /src/mongo/db/index/skipped_record_tracker.h:85: UNINIT_CTOR 116111 Class member declaration for "_indexCatalogEntry".
      /src/mongo/db/index/skipped_record_tracker.cpp:46: UNINIT_CTOR 116111 Non-static class member "_indexCatalogEntry" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Samyukta Lanka
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: