SERVER-50126 Use constructor delegation for skipped record tracker